created pages for tasks and task details, set up routing, fixed scss

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,6 +7,7 @@ $nav-height: 100px;
 /* Colors */
 $primary-color: #8338ec;
 $primary-color-disabled: #b588f4;
-$font-color: #343a40;
+$font-color-dark: #212529;
+$font-color-lightdark: #343a40;
 $shade-color: #c3c3c3;
 /* Colors */
