added card for task, imported Georgian locale

--- a/src/app/components/tasks-page/tasks-page.component.html
+++ b/src/app/components/tasks-page/tasks-page.component.html
@@ -1,1 +1,9 @@
-<h1 class="header">დავალებების გვერდი</h1>
+<header class="header" style="margin-bottom:52px">დავალებების გვერდი</header>
+
+<div class="status-flex-container">
+    <div class="status-column">
+        <app-task-card [task]="test"></app-task-card>
+    </div>
+</div>
+
+
