--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,4 +10,12 @@ $primary-color-disabled: #b588f4;
 $font-color-dark: #212529;
 $font-color-lightdark: #343a40;
 $shade-color: #c3c3c3;
+$priority-low: #08a508;
+$priority-medium: #ffbe0b;
+$priority-high: #fa4d4d;
+$department-1: #ff66a8;
+$status-1: #f7bc30;
+$status-2: #fb5607;
+$status-3: #ff006e;
+$status-4: #3a86ff;
 /* Colors */
