--- a/src/app/components/tasks-page/tasks-page.component.html
+++ b/src/app/components/tasks-page/tasks-page.component.html
@@ -1,9 +1,10 @@
-<header class="header" style="margin-bottom:52px">დავალებების გვერდი</header>
+<header class="header" style="margin-bottom: 52px">დავალებების გვერდი</header>
+
+<app-task-filter></app-task-filter>
 
 <div class="status-flex-container">
-    <div class="status-column">
-        <app-task-card [task]="test"></app-task-card>
-    </div>
+  <div class="status-column">
+    <header class="status-panel status-panel-1">დასაწყები</header>
+    <app-task-card [task]="test"></app-task-card>
+  </div>
 </div>
-
-
