--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,14 @@ nav {
   border-color: $primary-color-disabled;
 }
 
+.btn-rounded {
+  width: 155px;
+  justify-content: center;
+  border-radius: 20px;
+  padding: 7px 0;
+  letter-spacing: 1px;
+}
+
 .header {
   font-weight: 600;
   font-size: 34px;
@@ -98,6 +106,19 @@ nav {
 .status-flex-container {
   display: flex;
   align-items: first baseline;
+}
+.status-panel {
+  text-align: center;
+  color: white;
+  padding: 15px 0px;
+  max-width: 380px;
+  font-weight: 600;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
+.status-panel-1 {
+  background-color: $status-1;
 }
 
 .status-column {
@@ -166,6 +187,116 @@ nav {
   background-color: $department-1;
 }
 //tags
+
+//Filter Selection
+.dropdown-filter-container {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #dee2e6;
+  border-radius: 10px;
+  margin-bottom: 20 px;
+}
+
+.dropdown-toggler {
+  margin-right: 45px;
+  padding: 10px 30px 10px 18px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.dropdown-toggler > span {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-right: 8px;
+}
+
+.dropdown-toggler > img {
+  width: 24px;
+  color: black;
+}
+
+.dropdown-toggler-focused {
+  color: $primary-color;
+}
+
+.dropdown-toggler-focused > img {
+  transform: rotate(180deg);
+  filter: invert(24%) sepia(93%) saturate(2218%) hue-rotate(254deg)
+    brightness(92%) contrast(102%);
+  transition: 0.35s ease-in-out;
+}
+
+.dropdown-menu {
+  background-color: white;
+  box-sizing: border-box;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  border: 0.5px solid $primary-color;
+  border-radius: 10px;
+  width: 700px;
+  padding: 40px 30px 20px 30px;
+  margin-top: 10px;
+}
+
+.dropdown-item {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  padding: 10px 0;
+  cursor: pointer;
+}
+
+.dropdown-item > span {
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+.dropdown-item > img {
+  width: 22px;
+  margin-right: 15px;
+}
+
+.dropdown-button {
+  margin-top: 25px;
+  display: flex;
+  justify-content: end;
+}
+
+.filter-tags {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 30px;
+  margin: 25px 0;
+}
+
+.filter-tag {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ced4da;
+  border-radius: 10px;
+  padding: 6px 10px;
+  margin-right: 10px;
+}
+
+.filter-tag > spam {
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  margin-right: 5px;
+}
+
+.filter-tag > img {
+  width: 14px;
+}
+//Filter Selection
 
 //Space
 .mr-4 {
