--- a/src/app/components/tasks-page/tasks-page.component.html
+++ b/src/app/components/tasks-page/tasks-page.component.html
@@ -1,4 +1,4 @@
-<header class="header" style="margin-bottom: 52px">დავალებების გვერდი</header>
+<header class="header" style="margin: 40px 0 52px 0">დავალებების გვერდი</header>
 
 <app-task-filter></app-task-filter>
 
