added task details page

--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -18,7 +18,7 @@
     <div class="card-line">
       <div>
         <img
-          class="card-avatar"
+          class="avatar"
           [src]="resolveImgSrc(task.employee?.avatar)"
           alt="employee-avatar"
         />
