--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,12 @@
   margin: 0;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .container {
   margin: 0 auto;
   max-width: $max-width - 2 * ($container-padding);
@@ -30,6 +36,12 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
 }
 
 .logo {
@@ -252,7 +264,7 @@ nav {
   cursor: pointer;
 }
 
-.dropdown-item > span {
+.dropdown-item span {
   font-size: 16px;
   line-height: 100%;
   letter-spacing: 0%;
