--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,12 +67,13 @@ nav {
 
 .btn {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 600;
+  letter-spacing: 1px;
   display: flex;
   align-items: center;
   padding: 10px 20px;
   border-radius: 5px;
-  border: 2px solid $primary-color;
+  border: 1px solid $primary-color;
   cursor: pointer;
 }
 
@@ -328,3 +329,150 @@ nav {
   margin-right: 40px;
 }
 //Space
+
+.field {
+  width: 100%;
+  height: 900px;
+  background-color: #fbf9ffa6;
+  padding: 65px 55px 140px 55px;
+  border: 0.3px solid #ddd2ff;
+  border-radius: 4px;
+}
+
+.inline {
+  display: flex;
+  align-items: start;
+}
+
+.label-input-pair {
+  width: 550px;
+  display: flex;
+  flex-direction: column;
+}
+
+.label-input-pair > label {
+  font-size: 16px;
+  line-height: 100%;
+  margin-bottom: 6px;
+  color: #343a40;
+}
+
+input,
+textarea {
+  border: 1px solid #dee2e6;
+  outline: none;
+  border-radius: 5px;
+  padding: 14px;
+  width: 550px;
+  margin-bottom: 4px;
+  font-size: 350;
+  font-size: 14px;
+  color: #212529;
+}
+
+input {
+  height: 45px;
+}
+
+textarea {
+  height: 135px;
+  resize: none;
+  overflow: hidden;
+}
+
+.validation-message {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  font-weight: 350;
+  font-size: 10px;
+  line-height: 100%;
+  color: #6c757d;
+}
+
+.validation-message > img {
+  width: 16px;
+  padding: 1px 2px;
+}
+
+p.check-failed {
+  color: #fa4d4d;
+}
+
+p.check-passed {
+  color: #08a508;
+}
+
+input.check-failed,
+textarea.check-failed {
+  border-color: #fa4d4d;
+}
+
+input.check-passed,
+textarea.check-passed {
+  border-color: #08a508;
+}
+
+p.check-failed > img {
+  filter: invert(32%) sepia(66%) saturate(2974%) hue-rotate(340deg)
+    brightness(125%) contrast(96%);
+}
+
+p.check-passed > img {
+  filter: invert(39%) sepia(37%) saturate(4740%) hue-rotate(96deg)
+    brightness(100%) contrast(94%);
+}
+
+.custom-select {
+  min-width: 260px;
+  min-height: 45px;
+  position: relative;
+}
+
+.custom-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 300;
+  outline: none;
+  padding: 14px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  color: #000;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.custom-select::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  right: 10px;
+  top: calc(50% - 7px);
+  width: 14px;
+  height: 14px;
+  background-image: url("./../public/dropdown-arrow.svg");
+  background-size: 14px;
+  pointer-events: none;
+}
+
+.custom-select:focus::after {
+  rotate: -180deg;
+  transition: 0.35s;
+}
+
+option:checked {
+  background-color: #e8e8e8;
+}
+
+select.check-failed {
+  border-color: #fa4d4d;
+}
+
+select.check-passed {
+  border-color: #08a508;
+}
