--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -7,7 +7,9 @@
     <button class="btn btn-secondary mr-40" (click)="openModal()">
       თანამშრომლის შექმნა
     </button>
-    <button class="btn btn-primary">+ შექმენი ახალი დავალება</button>
+    <button class="btn btn-primary" routerLink="/add-task">
+      + შექმენი ახალი დავალება
+    </button>
   </div>
 </nav>
 
