--- a/src/app/components/task-edition-page/task-edition-page.component.html
+++ b/src/app/components/task-edition-page/task-edition-page.component.html
@@ -72,18 +72,19 @@
           <div class="inline" style="margin-bottom: 55px">
             <div class="label-input-pair" style="margin-right: 160px">
               <label for="">დედლაინი *</label>
-              <input
-                type="date"
-                [formControl]="$any(form.controls.due_date)"
-                [ngClass]="{
-                  'check-failed':
-                    form.controls.due_date.touched &&
-                    form.controls.due_date.errors,
-                  'check-passed':
-                    form.controls.due_date.touched &&
-                    !form.controls.due_date.errors
-                }"
-              />
+              <mat-form-field class="example-full-width">
+                <input
+                  matInput
+                  [min]="minDate"
+                  [matDatepicker]="picker"
+                  [formControl]="$any(form.controls.due_date)"
+                />
+                <mat-datepicker-toggle
+                  matIconSuffix
+                  [for]="picker"
+                ></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
             </div>
           </div>
         </div>
