--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.cdnfonts.com/css/fredoka-one");
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 @import "./scss/main.scss";
 
 * {
@@ -476,3 +477,6 @@ select.check-failed {
 select.check-passed {
   border-color: #08a508;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
