--- a/src/app/components/add-employee-modal/add-employee-modal.component.scss
+++ b/src/app/components/add-employee-modal/add-employee-modal.component.scss
@@ -10,12 +10,14 @@
 }
 
 .modal {
+  position: fixed;
   width: fit-content;
-  margin: 120px auto;
   border-radius: 10px;
   background-color: #fff;
-  z-index: 11;
+  z-index: 12;
   padding: 40px 50px 60px 50px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .modal-close {
