--- a/src/styles.scss
+++ b/src/styles.scss
@@ -260,16 +260,24 @@ nav {
 }
 
 .dropdown-menu {
+  z-index: 5;
   background-color: white;
   box-sizing: border-box;
   position: absolute;
-  display: flex;
-  flex-direction: column;
   border: 0.5px solid $primary-color;
   border-radius: 10px;
   width: 700px;
   padding: 40px 30px 20px 30px;
   margin-top: 10px;
+}
+
+.dropdown-item-list {
+  background-color: white;
+  max-height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .dropdown-item {
@@ -298,11 +306,12 @@ nav {
 }
 
 .filter-tags {
+  position: relative;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  height: 30px;
-  margin: 25px 0;
+  min-height: 30px;
+  margin: 25px 0 15px 0;
 }
 
 .filter-tag {
@@ -311,7 +320,7 @@ nav {
   border: 1px solid #ced4da;
   border-radius: 10px;
   padding: 6px 10px;
-  margin-right: 10px;
+  margin: 0 10px 10px 0;
 }
 
 .filter-tag-text {
@@ -419,12 +428,13 @@ p.check-passed {
 }
 
 input.check-failed,
-textarea.check-failed {
+textarea.check-failed,
+div.check-failed {
   border-color: #fa4d4d;
 }
 
 input.check-passed,
-textarea.check-passed {
+textarea.check-passed div.check-passed {
   border-color: #08a508;
 }
 
