connected task editing page to api, made some minor changes on styles, etc

--- a/src/app/components/add-employee-modal/add-employee-modal.component.html
+++ b/src/app/components/add-employee-modal/add-employee-modal.component.html
@@ -72,7 +72,7 @@
         <div class="label-input-pair">
           <label for="">დეპარტამენტი *</label>
           <app-custom-select
-            [formControl]="$any(form.controls.department_id)"
+            [formControl]="$any(form.controls.department)"
             [items]="departments"
             [width]="385"
           ></app-custom-select>
