--- a/src/app/components/add-employee-modal/add-employee-modal.component.scss
+++ b/src/app/components/add-employee-modal/add-employee-modal.component.scss
@@ -16,6 +16,7 @@
   background-color: #fff;
   z-index: 12;
   padding: 40px 50px 60px 50px;
+  top: 8%;
   left: 50%;
   transform: translate(-50%, 0);
 }
