connected task details page to api along with comment section

--- a/src/app/components/comments/comment-section/comment-section.component.html
+++ b/src/app/components/comments/comment-section/comment-section.component.html
@@ -5,7 +5,7 @@
 
   <div class="inline" style="margin: 65px 0 20px 0">
     <header class="sub-header mr-8">კომენტარები</header>
-    <div class="counter">10</div>
+    <div class="counter">{{ comments? calculateTotalComments() : 0 }}</div>
   </div>
   <ng-container *ngFor="let comment of comments">
     <app-comment
