--- a/src/app/components/comments/comment-section/comment-section.component.scss
+++ b/src/app/components/comments/comment-section/comment-section.component.scss
@@ -7,6 +7,7 @@
   background-color: #f8f3fea6;
   border: 0.3px solid #ddd2ff;
   padding: 40px 45px 40px 50px;
+  overflow-y: auto;
 }
 
 .sub-header {
