--- a/src/styles.scss
+++ b/src/styles.scss
@@ -166,6 +166,7 @@ nav {
 //tags
 .priority-tag {
   display: flex;
+  align-items: center;
   border: 0.5px solid;
   border-radius: 4px;
   padding: 4px;
@@ -212,6 +213,30 @@ nav {
 
 .department-1 {
   background-color: $department-1;
+}
+
+.department-2 {
+  background-color: #fa4d4d;
+}
+
+.department-3 {
+  background-color: #86ca4d;
+}
+
+.department-4 {
+  background-color: #3c8fb6;
+}
+
+.department-5 {
+  background-color: #c929ae;
+}
+
+.department-6 {
+  background-color: #cec115;
+}
+
+.department-7 {
+  background-color: #2c40af;
 }
 //tags
 
