--- a/src/app/components/tasks-page/tasks-page.component.html
+++ b/src/app/components/tasks-page/tasks-page.component.html
@@ -4,6 +4,7 @@
   [departments]="departments"
   [priorities]="priorities"
   [employees]="employees"
+  (sendFilter)="getStructuredTaskList($event)"
 ></app-task-filter>
 
 <ng-container *ngIf="structuredTaskList">
