--- a/src/styles.scss
+++ b/src/styles.scss
@@ -187,9 +187,11 @@ nav {
 .department-tag {
   display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   color: white;
   border-radius: 15px;
-  padding: 5px 9px 5px 9px;
+  padding: 6px 10px;
 
   font-size: 12px;
   line-height: 100%;
