made task-editing page form storable before destroying component

--- a/src/app/components/custom-select/custom-select.component.html
+++ b/src/app/components/custom-select/custom-select.component.html
@@ -1,7 +1,7 @@
 <div class="custom-dropdown-wrapper" [style.width]="width + 'px'">
   <div
     class="custom-dropdown-toggler"
-    (click)="disabled ? null : toggleDropdown()"
+    (click)="disabled2 ? null : toggleDropdown()"
     [ngClass]="{
       'dropdown-focus': toggle,
       'check-failed': ngControl.touched && ngControl.control?.errors,
