--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
 <ng-container *ngIf="modalToggle">
   <app-add-employee-modal
     [departments]="departments"
-    (closeModal)="onCloseModal()"
+    (closeModal)="onCloseModal($event)"
     (submit)="onSubmit($event)"
   ></app-add-employee-modal>
 </ng-container>
