--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,8 @@
-@import "./variables.scss";
-@import "./material-themes.scss";
+@import "./variables";
+@import "./buttons";
+@import "./dropdown-filter-styles";
+@import "./input-select-validation-styles";
+@import "./material-themes";
+@import "./native-select-styling";
+@import "./priority-department-tags";
+@import "./status-styles";
